Dev (#297)
* feat: implement collapsed synopsis functionality for improved book detail presentation

* fix: update BookSearchView to remove const and update pubspec.lock dependencies

* feat: enhance AuthCard with logo and simplify BookcaseResults progress logic; add Bookmark component for status display in ProfileShelfBookCard

* feat: implement book suggestion functionality with shelf selection in BookDetailsCard and BookcaseModals; enhance EstantePage for handling book details navigation

* feat: improve layout and styling of ProfileShelfBookCard; enhance image handling and progress display

* feat: enhance layout of profile components; adjust grid alignment and progress display logic

* feat: enhance SeguidorProfilePage with reading goals and author insights; add shelf book details panel and improve empty states

* feat: add weekly report for sprint 3 detailing completed tasks and pull request links

* feat: refactor Content and Review models to use Long for bookId; update Comment and Review services for improved validation and handling

* Update marcos_alberto.md

* feat: update calculateAverageRating and countRatings queries to use bookId directly instead of book.id

* feat: add Gatling dependencies and performance simulation for book retrieval tests (#125)

* Add files via upload

* feat: enhance community page with book suggestions and community creation modal

* feat: update community creation form with book selection and description fields

* feat: improve styling and layout of community creation modal

* feat(performance-tests): add load, spike, and stress tests for collections, shelves, and shelf items (#131)

- Implemented collection spike and stress tests to evaluate performance under varying loads.
- Created shelf load, spike, and stress tests to assess CRUD operations and listing performance.
- Developed shelf item load, spike, and stress tests to measure item management under load.
- Introduced BookQueryHelper to enhance book search functionality wi